--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="logo">T</div>
         <div>
           <div class="title">Stats 207 Exam 1 Study Game</div>
-          <div class="subtitle">Neyland (checked out) • UT vs Alabama • Final target: 52–49</div>
+          <div class="subtitle">Neyland (God's Country) • UT vs Alabama • Final target: 52–49</div>
         </div>
       </div>
 
@@ -59,7 +59,29 @@
 
     <section class="panel">
       <div class="statusrow">
-        <div class="status">
+  <div class="status">
+    <div class="label">Down & Distance</div>
+    <div class="small" id="downDist">1st & 10 • Ball on UT 25</div>
+    <div class="small" id="clockLine">Q1 15:00 • Crowd: checked-out</div>
+  </div>
+
+  <div class="status">
+    <div class="label">Drive Progress</div>
+    <div class="meter">
+      <div class="meterbar" id="driveBar"></div>
+    </div>
+    <div class="small" id="driveText">Start on the UT 25. Convert 1st downs, score in the checkerboard.</div>
+  </div>
+
+  <div class="status">
+    <div class="label">Correct Streak to Score</div>
+    <div class="meter">
+      <div class="meterbar" id="meterbar"></div>
+    </div>
+    <div class="small" id="streakText">0 / 5 correct</div>
+  </div>
+</div>
+   <div class="status">
           <div class="label">Correct Streak Toward Next Score</div>
           <div class="meter">
             <div class="meterbar" id="meterbar"></div>
