--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
         <div class="scene-title" id="sceneTitle">—</div>
 
         <div class="sprites" id="sprites">
+            <div class="mini-checkerboard" aria-hidden="true"></div>
           <div class="sprite hyatt" id="hyatt" aria-label="Jalin Hyatt (cartoon)">
             <div class="helmet"></div>
             <div class="body"></div>
